# MatrixCPlus

./: CMakeLists.txt  DEBUG.h  main.cpp
includes/: Affine_space.h  Augmented_matrix.h  Linear_space.h  MathObject.h  Matrix.h  Point.h  Rational.h  Support.h
src/: Affine_space.h  Affine_space.tpp  Augmented_matrix.h  Augmented_matrix.tpp  Linear_space.h  Linear_space.tpp  MathObject.h  Matrix.h  Matrix.tpp  Point.h  Point.tpp  Rational.h  Rational.tpp  Support.cpp  Support.h  Support.tpp
tests/: gauss_test.h  matrix_test.cpp  matrix_test.h  rational_tests.h  test.cpp  tests.cpp
